<resources>
    <string name="app_name">Tiempo Retiro</string>
    <string name="edit_info">Edit Info</string>
    <string name="personal_info_title">Edit Personal Info.</string>
    <string name="birth_date">Birth Date</string>
    <string name="listed_weeks">Listed Weeks</string>
    <string name="lw_by_hire_date">Hire Date</string>
    <string name="lw_by_ent_manually">Entered Manually</string>
    <string name="num_of_weeks">Number Of Weeks</string>
    <string name="years_working">Years Working</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hire_date">Hire Date</string>
    <string name="no_date_spec">(No date specified)</string>
    <string name="calculate_weeks">Calculate weeks..</string>
    <string name="enter_hire_date">(Enter Hire Date)</string>
    <string name="based_on_hire_date">By Hire Date</string>
    <string name="accept">Accept</string>
    <string name="ok">Ok</string>
    <string name="error_no_listed_weeks">Please specify the number of weeks</string>
    <string name="attention">Attention</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
